# AndroidDevelopmentKit

./: .gitignore  AndroidPromptKit.cpp  AndroidPromptKit.h  CMakeLists.txt  README.md  premake5.lua
scripts/: command_line_tools.bat  install_android_sdk.bat  install_cmake.bat  install_gradle.bat  install_jdk.bat  sdk_dependencies.bat
src/: Application.cpp  Application.h  CheckDependencies.cpp  CheckDependencies.h  main.cpp
