# CMakeList.txt : CMake project for AndroidPromptKit, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("AndroidPromptKit")

# Add source to this project's executable.
add_executable (AndroidPromptKit "AndroidPromptKit.cpp" "AndroidPromptKit.h")

# TODO: Add tests and install targets if needed.
